argocd-k8s-manifests/stage/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: at-ai-tool-dashboard-ingress-internal-aiatt
  namespace: advtech
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.regional-static-ip-name: "at-ai-tool-dashboard-static-ip-stage"
    networking.gke.io/suppress-firewall-xpn-error: "true"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: at-ai-att-fe-api
                port:
                  number: 8080
          - path: /manuscripttransfer-cnn/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: at-ai-att-fe-inferencing
                port:
                  number: 5002
